--- a/src/com/view/MenuView.form
+++ b/src/com/view/MenuView.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.view.MenuPanel">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.view.MenuView">
   <grid id="27dc6" binding="MenuPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -10,45 +10,41 @@
     </properties>
     <border type="none"/>
     <children>
-      <hspacer id="a1be3">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <vspacer id="a41fa">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <component id="5620c" class="javax.swing.JButton" binding="startGameButton" default-binding="true">
+      <component id="66c4d" class="javax.swing.JButton" binding="startGameButton" default-binding="true">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <foreground color="-1"/>
           <text value="Start Game"/>
         </properties>
       </component>
-      <component id="3056" class="javax.swing.JButton" binding="exitGameButton" default-binding="true">
+      <hspacer id="6b833">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <vspacer id="903ac">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <component id="8d6d3" class="javax.swing.JButton" binding="exitGameButton" default-binding="true">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <enabled value="true"/>
-          <foreground color="-1"/>
           <text value="Exit Game"/>
         </properties>
       </component>
-      <component id="e59e8" class="javax.swing.JTextField" binding="welcomeToTheLastTextField" default-binding="true">
+      <component id="57c1c" class="javax.swing.JTextField" binding="welcomeToTheLastTextField" default-binding="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
-          <foreground color="-1"/>
           <horizontalAlignment value="0"/>
-          <text value="Welcome to The Last Passenger"/>
+          <text value="Welcome to the Last Passenger"/>
         </properties>
       </component>
     </children>
